--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>com.cong.sql.slow.mirror</groupId>
     <artifactId>sql-slow-mirror</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>sql-slow-mirror-core</module>
+    </modules>
 
     <properties>
         <easy.rule.version>4.1.0</easy.rule.version>
@@ -16,24 +20,27 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <gson.version>2.10.1</gson.version>
+        <mybatis.version>3.5.13</mybatis.version>
+        <slf4j_version>2.0.6</slf4j_version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.10.1</version>
+            <version>${gson.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.5.13</version>
+            <version>${mybatis.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>2.0.6</version>
+            <version>${slf4j_version}</version>
         </dependency>
 
         <!-- commons start -->
