--- a/sql-slow-mirror-sample/src/main/resources/application.yml
+++ b/sql-slow-mirror-sample/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-#下面这些内容是为了让MyBatis映射
-#指定Mybatis的Mapper文件
-mybatis.mapper-locations=classpath:mappers/*xml
-#指定Mybatis的实体目录
-mybatis.type-aliases-package=com.cong.sql.slow.mirror.sqlslowmirrorsample.mybatis.entity
-
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/short_link_dog?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    username: root
+    password: root
