--- a/sql-slow-mirror-sample/pom.xml
+++ b/sql-slow-mirror-sample/pom.xml
@@ -19,6 +19,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>com.cong.sql.slow.mirror</groupId>
+            <artifactId>sql-slow-mirror-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.2.2</version>
