--- a/sql-slow-mirror-sample/src/main/resources/application.yml
+++ b/sql-slow-mirror-sample/src/main/resources/application.yml
@@ -4,3 +4,7 @@ spring:
     url: jdbc:mysql://localhost:3306/sql_slow?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
     password: root
+sql:
+  slow:
+    mirror:
+      enabled: true
